# A-Ops

./: .gitmodules  A-Ops.spec  README.en.md  README.md  roadmap.md
adoctor-check-executor/: adoctor-check-executor  adoctor-check-executor.service  setup.py
adoctor-check-executor/adoctor_check_executor/: check_executor_manager.py
adoctor-check-executor/adoctor_check_executor/common/: check_consumer.py  (+5 more)
adoctor-check-executor/conf/: check_executor.ini  check_rule_plugin.yml
adoctor-check-scheduler/: adoctor-check-scheduler  adoctor-check-scheduler.service  setup.py
adoctor-check-scheduler/adoctor_check_scheduler/: __init__.py  manage.py  url.py  view.py
adoctor-check-scheduler/conf/: check_scheduler.ini
adoctor-cli/: adoctor  setup.py
adoctor-cli/adoctor_cli/: base_cmd.py  cmd_entrance.py
adoctor-diag-executor/: adoctor-diag-executor  adoctor-diag-executor.service  setup.py
adoctor-diag-scheduler/: adoctor-diag-scheduler  adoctor-diag-scheduler.service  setup.py
adoctor-diag-scheduler/adoctor_diag_scheduler/: __init__.py  manage.py  url.py  view.py
adoctor-diag-scheduler/conf/: diag_scheduler.ini
aops-agent/: README.md  aops-agent.service  setup.py
aops-agent/agent/: __main__.py
aops-agent/aops_agent/: __main__.py
aops-agent/conf/: agent.conf  agent_token.json
aops-check/: README.md  aops-check.service  requirements.txt  setup.py
aops-check/aops_check/: __init__.py  manage.py  url.py
aops-check/conf/: check.ini  check_default.json
aops-cli/: aops  setup.py
aops-cli/aops_cli/: base_cmd.py  cmd_entrance.py
aops-cli/tests/: test_account_cmd.py
aops-database/: aops-basedatabase  aops-database  aops-database.service  manage.py  setup.py
aops-database/aops_database/: __init__.py  manage.py  url.py
aops-database/conf/: database.ini  default.json
aops-manager/: aops-manager  aops-manager.service  manage.py  setup.py
aops-manager/aops_manager/: __init__.py  manage.py  url.py
aops-manager/conf/: default.json  manager.ini
aops-manager/tests/: test_config_manager.py  test_deploy_manager.py
aops-tools/aops_tools/: README.md  build_inventory.py  install_aops.sh
aops-utils/: aops-utils  setup.py
aops-utils/aops_utils/: cli_utils.py  manage.py  readconfig.py  singleton.py  time_utils.py  validate.py
aops-utils/conf/: sample.yaml  system.ini
aops-web/: .eslintrc.js  .gitignore  .prettierrc.js  package.json  vue.config.js
aops-web/deploy/: aops-nginx.conf  aops-web.service
aops-web/frontEnd/: README.zh-CN.md  package.json  vue.config.js
aops-web/license/: LICENSE
aops-web/public/: index.html
aops-web/src/: main.js
aops/conf/: system.ini
cve-manager/conf/: cve-manager.ini
doc/design/: Aops设计方案.md
doc/manual/: deployment_guidance.md
docs/design/: A-Ops架构设计文档.md
gala-anteater/: .gitignore  Dockerfile  README-zh.md  README.md  main.py  requirements.txt  setup.py
gala-anteater/anteater/: main.py
gala-anteater/configuration/: log.settings.ini  service.settings.ini
gala-anteater/docs/: kafka_to_arangodb.md
gala-anteater/model/: base.py  random_forest.py  vae.py
gala-anteater/service/: gala-anteater.service  prometheus.py
gala-anteater/source/: metrics.py
gala-anteater/utils/: common.py  config_parser.py  log.py
gala-gopher/: .gitignore  README.md  build.sh  install.sh
gala-gopher/config/: gala-gopher.conf  task_whitelist.conf
gala-gopher/doc/: api_doc.md  conf_introduction.md  design_coe.md  example_CDN_trace.md  how_to_add_probe.md  how_to_build_docker_image.md
gala-gopher/src/daemon/: CMakeLists.txt  daemon.c  daemon.h  main.c
gala-gopher/test/: test_probes.sh
gala-gopher/test/test_modules/: CMakeLists.txt  main.c  test_fifo.c  test_fifo.h  test_imdb.c  test_imdb.h  test_kafka.c  test_kafka.h  test_meta.c  test_meta.h  test_probe.c  test_probe.h  test_taosdata.c  test_taosdata.h
gala-gopher/test/test_probes/: CMakeLists.txt  main.c  test_probes.c  test_probes.h
gala-ragdoll/: Dockerfile  README.md  develop_env.sh  installDoc  requirements.txt  setup.py
gala-ragdoll/config/: gala-ragdoll.conf
gala-ragdoll/doc/: design.md  development_guidelines.md  instruction_manual.md  requirement_decomposition.xlsx
gala-ragdoll/ragdoll/: __main__.py  encoder.py
gala-ragdoll/service/: gala-ragdoll.service
gala-ragdoll/swagger_server/: __main__.py
gala-ragdoll/yang_modules/: openEuler-bashrc.yang  openEuler-coremail.conf.yang  openEuler-fstab.yang  openEuler-group.yang  openEuler-hostname.yang  openEuler-hosts.yang  openEuler-ld.so.conf.yang  openEuler-limits.conf.yang  openEuler-logos-openEuler.repo.yang  openEuler-ntp.conf.yang  openEuler-passwd.yang  openEuler-profile.yang  openEuler-rc.local.yang  openEuler-resolv.conf.yang  openEuler-shadow.yang  openEuler-ssh_config.yang  openEuler-sshd_config.yang  openEuler-sudoers.yang  openEuler-sysctl.conf.yang
gala-spider/: .gitignore  README.md  edge_generate.py  gala-spider.conf  kafka_consumer.py  node_generate.py  py_to_neo4j_topo.py  requirements.txt  setup.py  test-requirements.txt
gala-spider/anomaly_detection/: anomaly_detection.py  anomaly_detection_base_on_threshold.py  attribute_detection_base_on_threshold.py  common.py  detection_conf.yaml  item_detection.py  util.py
gala-spider/cause_inference/: __main__.py  arangodb.py  cause_infer.py  config.py  exceptions.py  infer_policy.py  model.py  rule_parser.py
gala-spider/config/: ext-observe-meta.yaml  gala-inference.yaml  gala-spider.conf  gala-spider.yaml  observe.yaml  topo-relation.yaml
gala-spider/doc/: conf_introduction.md  development_guidelines.md  how_to_add_new_observe_object.md  observe.yaml  spider_design.md
gala-spider/docs/: conf_introduction.md  development_guidelines.md  swagger.yaml
gala-spider/service/: gala-inference.service  gala-spider.service
gala-spider/spider/: __main__.py  daemon.py  encoder.py  exceptions.py  otherline.txt  storage_daemon.py  tcpline.txt
gala-spider/src/: gala-spider.py
gala-spider/swagger_server/: __main__.py
gala-spider/tests/: common.py  conftest.py  test_collector.py  test_controller.py  test_entity_mgt.py  test_processor.py
(+1247 files in other folders)
